# htgf-scraper

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
cache/: state.db
config/: htgf_thesis.yaml  sources.yaml  universities.yaml
outputs/: leads.csv  leads.xlsx  run_summary.md
outputs/onepagers/: 01_agentikus.md  01_mainline.md  01_plurai.md  02_agentikus.md  02_klimkit.md  02_mainline.md  02_rocketgraph.md  03_cordium.md  03_invoker.md  03_klimkit.md  03_rocketgraph.md  04_cordium.md  04_invoker.md  04_mainline.md  04_street-ai.md  05_cardamon.md  05_costhawk.md  05_mainline.md  05_street-ai.md  06_cardamon.md  06_costhawk.md  06_trulayer.md  06_yieldos.md  07_autolang.md  07_kiloclaw.md  07_thinkllm.md  08_klimkit.md  08_lightfield.md  08_trulayer.md  09_guesty-mcp-server.md  09_invoker.md  09_yieldos.md  10_autolang.md  10_pack-src.md  10_street-ai.md  11_costhawk.md  11_klimkit.md  12_grit.md  12_iasql.md  12_invoker.md  (+70 more)
prompts/: dedup_check.txt  extract_listing.txt  extract_startup.txt  hn_filter.txt  score_startup.txt
src/htgf_sourcer/: cli.py  db.py  dedup.py  enrich.py  export.py  fetch.py  llm.py  models.py  score.py
src/htgf_sourcer/exporters/: csv_writer.py  google_sheets.py  markdown_onepager.py
src/htgf_sourcer/sources/: _ai_listing.py  base.py  exist.py  (+6 more)
tests/: test_ai_listing.py  test_betalist.py  test_dedup.py  test_enrich.py  test_exist.py  test_export.py  test_fetch.py  test_github.py  test_hackernews.py  test_handelsregister.py  test_llm.py  test_models.py  test_producthunt.py  test_score.py  test_universities.py
