[project]
name = "htgf-sourcer"
version = "0.1.0"
description = "AI-native pipeline that surfaces pre-seed / seed Digital Tech startups in DACH."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "selectolax>=0.3",
    "playwright>=1.45",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlmodel>=0.0.21",
    "typer>=0.12",
    "loguru>=0.7",
    "rich>=13",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "gspread>=6.1",
    "google-auth>=2.32",
    "pyyaml>=6.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-recording>=0.13",
    "ruff>=0.6",
]

[project.scripts]
sourcer = "htgf_sourcer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htgf_sourcer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Typer's documented pattern is `param: T = typer.Option(...)` in defaults,
# and `doctor` deliberately runtime-checks the Python version it's running on.
"src/htgf_sourcer/cli.py" = ["B008", "UP036"]
